Disable Network button in lock screen.

Changing network settings is not allowed in lock screen. In previous
implementation, network button is enabled and able to click even in lock screen.

TEST=manual
BUG=865333

Change-Id: I1986b353d1cdbe698a5390a7861cdf804cc5990d
Reviewed-on: https://chromium-review.googlesource.com/1156189
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Toshiki Kikuchi <toshikikikuchi@google.com>
Cr-Commit-Position: refs/heads/master@{#579742}